--- a/css/login.css
+++ b/css/login.css
@@ -5,10 +5,9 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.header-preto {
-    background-color: rgb(0, 0, 0); 
+.header-pretoo {
+    background-color: #000000; 
     width: 100%;
-    height: 0px;             
     text-align: center;
 }
 
@@ -28,14 +27,14 @@ body {
     min-height: 100vh;
 }
 
-.logo {
+.logoo {
     display: flex;
     justify-content: center;
     align-items: center;
 
 } 
 
-.logo img {
+.logoo img {
     width: 80px; 
 }
 
@@ -120,7 +119,7 @@ input[type="email"]:focus {
     background-color: transparent;
     color: #000;
     border: 1px solid #999;
-    width: 100%;
+    width: 576px;
     padding: 12px;
     border-radius: 4px;
     cursor: pointer;
