--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -134,23 +134,25 @@
     height: 100%;
 }
 
-.btn-atualizar-carrinho {
-    background: none;
-    color: #000000;
-    border: 1px solid #000000;
-    padding: 10px 20px;
-    border-radius: 5px;
+.btn-secondary {
+    background-color: transparent;
+    color: #000;
+    border: 1px solid #999;
+    width: 576px;
+    padding: 12px;
+    border-radius: 4px;
     cursor: pointer;
-    font-size: 0.9em;
-    font-weight: bold;
-    margin-top: 30px;
-    float: right;
-    transition: all 0.2s;
+    font-weight: 500;
+    font-size: 12px;
+    transition: 0.2s;
 }
 
-.btn-atualizar-carrinho:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 6px 15px #39618b66;
+.btn-secondary a {
+    color: inherit;
+}
+
+.btn-secondary:hover {
+    background-color: #eaeaea;
 }
 
 .secao-resumo {
@@ -183,25 +185,39 @@
 
 }
 
-.btn-finalizar-compra {
-    background-color: #000000;
-    color: white;
-    border: none;
-    padding: 12px 20px;
-    border-radius: 5px;
+.btn-secondary {
+    background-color: transparent;
+    color: #000;
+    border: 1px solid #999;
+    width: 100%;
+    padding: 12px;
+    border-radius: 4px;
     cursor: pointer;
-    font-size: 1.1em;
-    font-weight: bold;
-    margin-top: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 0.2s;
+    font-weight: 500;
+    font-size: 12px;
+    transition: 0.2s;
 }
 
-.btn-finalizar-compra:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 6px 15px #39618b66;
+.btn-secondary:hover {
+    background-color: #eaeaea;
+}
+
+.btn-primary {
+    background-color: #000;
+    color: #fff;
+    border: none;
+    width: 350px;
+    padding: 12px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 13px;
+    transition: 0.2s;
+    margin-top: 20px;
+}
+
+.btn-primary:hover {
+    background-color: #333;
 }
 
 .icone-seta {
