--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,118 @@
-.Container img{
-    background-repeat: no-repeat;
-    background-size: cover;
+.container {
+    position: relative;
     width: 100%;
+}
+
+.carrossel {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.carrossel img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 1.5s ease-in-out;
+    z-index: 1;
+}
+
+.carrossel img.active {
+    opacity: 1;
+    z-index: 2;
+}
+
+.navbar {
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    width: 82%;
+    height: 4.0625rem;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+    box-shadow: 0 0 15px #0e0d0d0d;
+    z-index: 10;
+}
+
+.logo {
+    width: 60px;
+    height: 60px;
+    stroke: #333;
+    transition: transform 0.3s ease, stroke 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo:hover {
+    transform: scale(1.1);
+    stroke: #007bff;
+}
+
+.logo img {
+    width: 80px;
+}
+
+.icons {
+    display: flex;
+    align-items: center;
+}
+
+.search {
+    display: flex;
+    align-items: center;
+}
+
+.search input {
+    padding: 5px 10px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+    border-radius: 20px;
+    background: none;
+    outline: none;
+    color: #fff;
+}
+
+.search button {
+    background-color: transparent;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.icons>div {
+    margin-left: 20px;
+}
+
+svg {
+    width: 24px;
+    height: 24px;
+    stroke: #fff;
+    transition: stroke 0.3s ease, transform 0.2s ease;
+}
+
+svg:hover {
+    stroke: #333;
+    transform: scale(1.1);
+}
+
+.user {
+    width: 25px;
+    height: 25.5px;
+}
+
+.bag {
+    width: 22.955px;
+    height: 26.25px;
+    margin: 0 10px;
 }
