--- a/css/index.css
+++ b/css/index.css
@@ -6,20 +6,25 @@
 
 
 .carrossel {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100vh; 
+    overflow: hidden;
 }
 
 .carrossel img {
-  width: 100%;
-  height: 98vh;
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0;
-  transition: opacity 1.5s ease-in-out;
-  z-index: 1;
+
+    position: absolute;
+    top: 0;          
+    left: 0;      
+    width: 100%;
+    height: 100%; 
+    object-fit: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0;
+    transition: opacity 1.5s ease-in-out;
+    z-index: 1;
 }
 
 .carrossel img.active {
