--- a/css/login.css
+++ b/css/login.css
@@ -65,6 +65,7 @@ body {
 }
 
 input[type="text"],
+input[type="password"],
 input[type="email"] {
     width: 576px;
     padding: 12px;
@@ -77,6 +78,7 @@ input[type="email"] {
 }
 
 input[type="text"]:focus,
+input[type="password"]:focus,
 input[type="email"]:focus {
     border-color: #000;
 }
